# MiniTCM

./: .gitignore  LICENSE  MiniTCM-win32.spec  README.md  pyproject.toml  requirements.txt  run.py
mini_tcm_scripter/: __init__.py  app.py  dframe.py  gui-delete.py  gui.py  infopanel.py  ingrid.py  mainframe.py  mainpanel.py  outgrid.py  report.py
mini_tcm_scripter/resource/sample/MiniTCM/: config.toml
mini_tcm_scripter/resources/sample/MiniTCM/: config.toml
mini_tcm_scripter/sample_data/: __init__.py
minitcm/: __init__.py  app.py  checksum_frame.py  dframe.py  infopanel.py  ingrid.py  mainframe.py  mainpanel.py  outgrid.py  report.py
minitcm/resources/sample/MiniTCM/data/: sample.csv
minitcm/resources/sample/MiniTCM/profiles/: Profile 1.toml  Profile 2.toml
requirements/: common.txt  dev.txt
