[tool.poetry]
name = "minitcm"
version = "0.1.0"
description = ""
authors = ["JackLPK <puikit.li.jack@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
reportlab = "^3.5.49"
Jinja2 = "^2.11.2"
wxPython = "^4.1.0"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
minitcm = minitcm.app:main