[tool.poetry]
name = "minitcm"
version = "0.1.0"
description = ""
license = "MIT "
authors = ["JackLPK <puikit.li.jack@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
reportlab = "^3.5.49"
toml = "^0.10.1"
# wxPython = "^4.1.0"
wxPython = [
    {url="https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-18.04/wxPython-4.1.0-cp37-cp37m-linux_x86_64.whl", platform_system = "Linux"}
]

[tool.poetry.dev-dependencies]
pyinstaller = "4.0"

[tool.poetry.scripts]
minitcm = "minitcm.app:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

